Bug 267524 - Fix inconsistent ENABLE(LAYER_BASED_SVG_ENGINE) usage in RenderObject.h
Summary: Fix inconsistent ENABLE(LAYER_BASED_SVG_ENGINE) usage in RenderObject.h
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-15 00:15 PST by Ross Kirsling
Modified: 2024-01-15 12:33 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2024-01-15 00:15:04 PST
.
Comment 1 Ross Kirsling 2024-01-15 00:26:06 PST
Pull request: https://github.com/WebKit/WebKit/pull/22769
Comment 2 EWS 2024-01-15 03:06:32 PST
Committed 273036@main (c13502d53c2d): <https://commits.webkit.org/273036@main>

Reviewed commits have been landed. Closing PR #22769 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2024-01-15 03:07:17 PST
<rdar://problem/120999394>