Fix inconsistent ENABLE(LAYER_BASED_SVG_ENGINE) usage in RenderObject.h https://bugs.webkit.org/show_bug.cgi?id=267524

Unreviewed internal build fix.

* Source/WebCore/rendering/RenderObject.h:
(WebCore::RenderObject::isRenderSVGModelObject const):
(WebCore::RenderObject::isRenderSVGContainer const):
(WebCore::RenderObject::isRenderSVGShape const):
(WebCore::RenderObject::isRenderSVGResourceContainer const):
Expose predicates regardless of the ENABLE.
Currently we're randomly exposing some predicates and not others, yet some of the unexposed ones depend on exposed ones.
Callsites need to be able to check these predicates regardless of whether the feature is enabled.

Canonical link: https://commits.webkit.org/273036@main